custom/themes/opensceneryx/style.css
/*
Theme Name: OpenSceneryX
Description: OpenSceneryX theme, child of Twenty Eleven theme
Author: Austin Goudge
Template: twentyeleven
*/

@import url("../twentyeleven/style.css");

.singular .entry-header,
.singular .entry-content,
.singular footer.entry-meta,
.singular #comments-title {
	width: 100%;
}

.singular.page .hentry {
	padding-top: 1em;
}

#page {
	max-width: 1010px;
}

#site-title {
	font-family: 'Book Antiqua', Georgia, Palatino, Times, 'Times New Roman', serif;
	font-size: 32px;
}

#site-title a {
	color: #33A;
}

.tagline {
    font-style: italic;
    text-align: right;
    color: grey;
	margin-right: 1%;
	margin-left: 7.6%;
}

#access {
	background: #444;
}

#access a {
	color:#fff;
}

.comment-author-aussi > article > div.comment-content {
	color: #33A;
}

#google {
	background-color: #33A;
	display: block;
	height: 30px;
	min-width: 800px;
	padding-left: 0.4em;
	padding-top: 0.5em;
}

.highlight-new span {
	color: red;
}

.entry-content h2, .entry-content h3, .entry-content h4 {
	clear: none;
}

.entry-content h2 {
	font-size: 1.4em;
}

.thumbnailcontainer h3 {
        line-height: 1.5;
        padding: 0.5em;
}

ul.downloads li {
	list-style-type: none;
}

img.downloadicon {
	border: none;
	vertical-align: middle;
	margin: 0px 0.5em 0.5em 0px;
}

a.nounderline {
	border-bottom: none;
}

.warning {
	color: red;
}

div#toc h2 {
	padding-top: 0.5em;
	border-bottom: 1px solid #fff;
}

div#toc h4 {
	padding-top: 0.5em;
}

h2.folder {
    padding: 0.2em 0 0 3em;
    background-image: url('folder_generic.png');
    background-repeat: no-repeat;
    background-size: 2em;
}

h3 {
    font-size: 0.75em ! important;
}

h3.inline, h4.inline {
	display:inline;
	padding-right: 1em;
}

h3.folder {
    padding: 0.1em 1.5em 0 2em;
    background-image: url('folder_generic.png');
    background-repeat: no-repeat;
    background-size: 1.5em;
}

img.screenshot {
	margin: 3px 0px 2px 2px;
	float: right;
	max-width: 500px;
}

img.icon {
	border: none;
	vertical-align: bottom;
}

img.attributeicon {
	border: none;
	vertical-align: bottom;
	margin: 0px 0px 5px 0px;
}

img.downloadicon {
	border: none;
	vertical-align: middle;
	margin: 0px 0.5em 0.5em 0px;
}

img.miniobjecticon {
	border: none;
	margin: 0;
	padding: 0 1px 0 0;
	width: 1em;
	height: 1em;
}

p.inline-image-bullet img {
	border: none;
	padding: 0 0.5em 0 1em;
	margin: none;
}

p.warning {
	background-color: #fcc;
	color: #ff0000;
	padding: 0.5em;
}

p.footnote {
	font-size: 0.7em;
	line-height: 1.25em;
}

div.subcategories {
        padding-bottom: 1em;
}

div.virtualPath {
	display: block;
	background-color: #cfc;
	padding: 0.25em 0.5em 0.25em 0.5em;
}

div.extendedVirtualPath {
	margin-top: 0.2em;
	display: block;
	background-color: rgb(255, 233, 204);
	padding: 0.25em 0.5em 0.25em 0.5em;
}

div.deprecatedVirtualPath {
	margin-top: 0.2em;
	display: block;
	background-color: #fcc;
	padding: 0.25em 0.5em 0.25em 0.5em;
}

div.externalVirtualPath {
	margin-top: 0.2em;
	display: block;
	background-color: #eef;
	padding: 0.25em 0.5em 0.25em 0.5em;
}

div.virtualPath p,
div.extendedVirtualPath p,
div.deprecatedVirtualPath p,
div.externalVirtualPath p {
    margin: 0;
}

div.thumbnailcontainer {
    display: inline-block;
    width: 180px;
    height: 100%;
    margin: 0 0.25em 1em 0;
	text-align: center;
    line-height: 1.25;
    vertical-align: top;
    background-color: #F5F5FF;
}

div.thumbnailcontainer img {
	margin: 0.25em 0 0 0;
}

div.thumbnailcontainer p {
    margin: 0;
}

div.objectlogocontainer {
	padding-top: 1em;
	width: 100px;
	float: left;
}

div.objectlogocontainer img {
	max-width: 50px;
}

div.highlightbox {
	background-color: #EEEEFF;
	border: 1px solid #AAAACC;
	margin: 1em 0 2em;
	padding: 1em 1.5em;
}

fieldset.highlightbox {
        background-color: #EEEEFF ! important;
}

div.highlightbox h2 span {
    line-height: 40px;
    padding-left: 0.5em;
}

p#version {
	padding: 0.5em 0 0 0;
	margin: 0;
}

div.clear {
	clear:both;
}

ul.inline {
	list-style: none;
	margin: 0;
	padding: 0;
	list-style-type: disc;
	list-style-image: url(/doc/bullet_object.gif);
}

ul.inline li { display: inline; }
ul.inline li:after { content: " | "; }
ul.inline li:last-child:after { content: ""; }

div#breadcrumbs ul.inline {
	line-height: 2.0em;
	float: left;
	display: inline;
}

ul.mainItemDetails {
}

ul.mainItemDetails li.note {
	list-style-image: url(/doc/note.gif);
}

ul.mainItemDetails li.animated {
	list-style-image: url(/doc/animated.gif);
}

ul.secondaryItemDetails {
	font-size: 0.8em;
}

ul.dimensions {
 width: 50px;
 height: 61px;
 background: url(/doc/cube.gif);
 background-repeat: no-repeat;
 margin: 1em 0 1em 5em;
 padding: 0;
 position: relative;
}

ul.dimensions li {
	white-space: nowrap;
	font-size: 0.7em;
	margin: 0;
	padding: 0;
	list-style: none;
	display: block;
	position: absolute;
}

ul.dimensions li#width {left: 35px; top: -15px;}
ul.dimensions li#height {right: 55px; top: 25px; text-align: right;}
ul.dimensions li#depth {left: 50px; top: 40px;}

.fieldTitle {
	font-weight: bold;
}

.fieldValue {
}


/*Credits: Dynamic Drive CSS Library */
/*URL: http://www.dynamicdrive.com/style/ */

.hoverimage {
	position: relative;
	z-index: 0;
}

.hoverimage:hover {
	background-color: transparent;
	z-index: 50;
}

.hoverimage span{ /*CSS for enlarged image*/
	position: fixed;
	background-color: #fff;
	padding: 0;
	right: -1000px;
	visibility: hidden;
	color: black;
	text-decoration: none;
}

.hoverimage span img{ /*CSS for enlarged image*/
}

.hoverimage:hover span{ /*CSS for enlarged image on hover*/
	visibility: visible;
	top: 7em;
	right: 310px; /*position where enlarged image should offset horizontally */
}

.formLeft {
	width: 300px;
	float: left;
	clear: left;
	text-align: right;
	padding-right: 15px;
	white-space: nowrap;
	min-width: 5em;
}

.formRight {
	width: 400px;
	float: left;
	min-width: 5em;
}

/* Collapsing menu */

a.foldable {
	background-image: url('plus.png');
	background-repeat: no-repeat;
	background-position: right;
	padding-right: 2em ! important;
}

a.folded {
	background-image: url('minus.png');
}

ul.menu, ul.menu ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

ul.menu a {
  display: block;
  text-decoration: none;
}

ul.menu li {
  margin-top: 1px;
}

/* Top level items */
ul.menu li a {
	background-color: #444;
  color: #fff;
  padding: 0.5em;
  border: none;
}

ul.menu li a:hover {
	background-color: #000;
}

/* Level 1 items */
ul.menu li ul li a {
	background-color: #676767;
  color: #FFF;
  border-left: 0.25em #444 solid;
  padding-left: 0.75em;
  border-bottom: none;
}

ul.menu li ul li a:hover {
	background-color: #3333b4;
  color: #fff;
}

/* Level 2 items */
ul.menu li ul li ul li a {
	background-color: #eeeeff;
  color: #000;
  border-left: 0.5em #444 solid;
  padding-left: 1.25em;
}

/* Level 3 items */
ul.menu li ul li ul li ul li a {
  border-left: 0.75em #444 solid;
  padding-left: 1.5em;
}

/* Downloads */
ul.downloads li {
	list-style-type: none;
}

ol {
	margin-top: 0;
}

.entry-content div.description td {
	border-top: none;
}

.entry-content div.description th {
	border-bottom: 1px solid #ddd;
	font-weight: bold;
}

tt {
	font-family: "Lucida Console", Monaco, monospace;
	font-size: 90%;
}

.tooltip {
	border-bottom: none;
	color: green; outline: none;
	font-weight: bold;
	cursor: help;
	text-decoration: none;
  position: relative;
}

.tooltip-right {
	float: right;
}

.tooltip span {
  margin-left: -999em;
	position: absolute;
	padding: 0.8em 1em;
	background-color: black;
  color: #fff;
  text-align: center;
  border-radius: 6px;
}


.tooltip:hover span {
  position: absolute;
  left: 0;
  top: 0;
  z-index: 99;
  margin-left: 0;
  width: 250px;
}

.tooltip-right:hover span {
	left: auto;
	right: 0;
}

